<resources>
    <string name="app_name">Sanday</string>

    <string name="facebook_app_id" translatable="false">364803287658558</string>

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="signup">signup</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="name">name</string>
    <string name="confirm_password">confirm password</string>
    <string name="please_provide_old_pwd">Please provide old password.</string>
    <string name="please_provide_new_pwd">Please provide new password.</string>
    <string name="please_provide_confirm_new_pwd">Please provide confirm new password.</string>
    <string name="both_pwd_doest_not_match">Both password does not match!</string>
    <string name="please_provide_email">Please provide email address!</string>
    <string name="please_provide_birthday">Please provide birthday!</string>
    <string name="error">Error</string>
    <string name="please_provide_valid_email">Please provide valid email</string>
    <string name="please_provide_password">Please provide password!</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="please_provide_name">Please Provide name!</string>
    <string name="please_provide_repeat_password">Please provide confirm password!</string>
    <string name="both_password_not_match">Both password not match!</string>
    <string name="please_accept_terms_condition">Please first accept terms and conditions</string>
    <string name="NO_INTERNET_CONNECTION">No Internet Connection</string>
    <string name="it_s_everything_you_ll_ever_need">It\'s everything you\'ll ever need!</string>
    <string name="explore">Explore</string>
    <string name="destination">Destination</string>
    <string name="cart">Cart</string>
    <string name="booking">Booking</string>
    <string name="account">Account</string>
    <string name="fcm_token">FCM Token: %s</string>
    <!-- detail my self-->
    <string name="please_provide_title">Please provide title.</string>
    <string name="please_provide_family_name">Please provide family name.</string>
    <string name="please_provide_first_name">Please provide first name.</string>
    <string name="please_provide_phone_number">Please provide phone number.</string>
    <string name="please_provide_country_name">Please provide country name.</string>
    <string name="please_provide_country_code">Please provide country code.</string>
    <string name="please_provide_valid_phone_number">Please provide valid phone number.</string>
    <string name="please_select_a_participation_date">Please select a participation date</string>
    <string name="currency_rm">RM </string>
    <string name="select_language">Select Language</string>
    <string name="login_signup">Login / Signup</string>
    <string name="my_profile">My Profile</string>
    <string name="wishlist">Wishlist</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="change_password">Change Password</string>
    <string name="help">Help</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="do_you_really_want_to_logout">Do you really want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="login_cap">Login</string>
    <string name="or">Or</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="need_an_account">need an account?</string>
    <string name="sign_up">Sign Up!</string>
    <string name="birthday">birthdate</string>
    <string name="sign_up1">Sign Up</string>
    <string name="already_onboard">already onboard?</string>
    <string name="forgot_password1">Forgot Password</string>
    <string name="submit">Submit</string>
    <string name="all_tours_in_your_hand">All Tours In Your Hand</string>
    <string name="search_country_name">Search Country Name</string>
    <string name="no_results_found">No results found!</string>
    <string name="enter_review">Enter review</string>
    <string name="search_destinations">Search Destinations</string>
    <string name="no_results_found_we_re_currently_working_on_making_activities_in_more_destination_available_soon">No results found! We\'re currently working on making activities in more destination available soon</string>
    <string name="reviews">Reviews</string>
    <string name="order_summary">Order Summary</string>
    <string name="qty">Qty</string>
    <string name="amount">Amount</string>
    <string name="actual_payment">Actual Payment</string>
    <string name="merchant_note">Merchant Note</string>
    <string name="rate_activity">Rate Activity</string>
    <string name="view_voucher">View Voucher</string>
    <string name="booking_options">Booking Options</string>
    <string name="edit">Edit</string>
    <string name="select_date">Select Date</string>
    <string name="package_quantity">Package Quantity</string>
    <string name="total">Total</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="book_now">Book Now</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="subtotal">Subtotal</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="no_activity_found">No Activity Found!</string>
    <string name="things_to_do">Things to Do</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="destinations">Destinations</string>
    <string name="popular_destinations">Popular Destinations</string>
    <string name="view_all">View All</string>
    <string name="read_all_reviews">Read All Reviews</string>
    <string name="package_options">Package Options</string>
    <string name="what_to_expect">What To Expect</string>
    <string name="activity_information">Activity Information</string>
    <string name="how_to_use">How To Use</string>
    <string name="cancelation_policy">Cancelation Policy</string>
    <string name="faqs">FAQs</string>
    <string name="popular_activities">Popular Activities</string>
    <string name="pay">Pay</string>
    <string name="traveler_s_information">Traveler\'s Information</string>
    <string name="title">Title</string>
    <string name="family_name_as_on_travel_document">Family Name(as on Travel Document)</string>
    <string name="first_name_as_on_travel_document">First Name(as on Travel Document)</string>
    <string name="country_region_of_travel_document">Country/Region of Travel Document</string>
    <string name="country_code">Country Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_to_receive_voucher">Email(To Receive Voucher)</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="payment_options">Payment Options</string>
    <string name="paypal">PayPal</string>
    <string name="pay_now">Pay Now</string>
    <string name="save">Save</string>
    <string name="view_less">View Less</string>
    <string name="view_more">View More</string>
    <string name="my_booking">My Booking</string>
    <string name="log_in1">Log In</string>
    <string name="birthday1">Birthdate</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="paid_amount">Paid Amount </string>
    <string name="pending">Pending</string>
    <string name="confirmed">Confirmed</string>
    <string name="expired">Expired</string>
    <string name="canceled">Canceled</string>
    <string name="your_shopping_cart_is_empty">Your shopping cart is empty.</string>
    <string name="select_title">Select Title</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="choose_option">Choose Option</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="are_you_sure_delete_activity">Are you sure you want to delete this activity?</string>
    <string name="no_notification_found">No notification found!</string>
    <string name="recently_added">Recently Added</string>
    <string name="search_city_or_attraction">Search City Or Attraction</string>
    <string name="suggestions">Suggestions</string>
    <string name="simply_browse_and_tap_on_the_heart_icon">Simply browse and tap on the heart icon.</string>
    <string name="no_items_found">No items found!</string>
    <string name="booking_ref_id">Booking Ref Id </string>
    <string name="pending_payment">Pending Payment</string>
    <string name="book_date">Book Date: </string>
    <string name="write_review">Write Review</string>
    <string name="order_no">Order No:</string>
    <string name="pick">Pick</string>
    <string name="are_you_sure_you_want_cancel_process">Are you sure you want to cancel this process?</string>
    <string name="no_booking_yet">No booking...yet!</string>
    <string name="booking_date">Booking Date: </string>
    <string name="paid_status">Paid</string>
    <string name="search_activities_in">Search activities in </string>
    <string name="order_placed">Order Placed</string>
    <string name="you_can_select_max_5_images">You can select maximum 5 images.</string>
    <string name="please_provide_rating">Please provide rating</string>
    <string name="please_provide_review">Please provide review</string>
    <string name="you_can_add_max_item">You can add maximum</string>
    <string name="you_can_add_min_item">You have to add minimum</string>
    <string name="qunatity_for_item"> quantity for this item.</string>
    <string name="qunatity_for_this_pkg"> quantity for the</string>
    <string name="cart_validation_error">Some items in your cart is invalid,so please fix this for purchase item!</string>
    <string name="dialog_msg_remove_order_confirmation">In your current order some activity might be not available on date or disable by merchant. Are you sure you want to remove invalid items?</string>
    <string name="remove_order">Remove Order</string>
    <string name="selected_package_might_be_not_availalbe_longer_so_please_pick_another_one">Selected package might be not available longer. So please pick another one!</string>
    <string name="please_check_min_qauntity">Please check minimum quantity.</string>
</resources>
