<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:local="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">



        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/dark_white"
            android:elevation="5dp"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:titleTextColor="@android:color/white"
            local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_back_view"
                    android:layout_width="40dp"
                    android:layout_height="28dp"
                    android:padding="5dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:adjustViewBounds="true"
                    android:src="@mipmap/back_white1"
                    android:tint="@color/black_color"
                    android:visibility="visible" />

                <com.san.app.font.TextViewAirbnb_bold
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="55dp"
                    android:text="@string/pay"
                    android:textColor="@color/app_theme_dark"
                    android:textSize="18dp" />

            </FrameLayout>
        </android.support.v7.widget.Toolbar>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_white">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <android.support.v4.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bg_white">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvitemList"
                    android:nestedScrollingEnabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="-7dp"
                    android:scrollbars="vertical" />

                </android.support.v4.widget.NestedScrollView>

                <com.san.app.font.TextViewAirbnb_book
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/traveler_s_information" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.san.app.font.EditTextAirbnb_book
                            android:id="@+id/edtTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            android:focusable="false"
                            android:hint="@string/title"
                            android:drawableRight="@drawable/ic_down_arrow_img"
                            android:imeOptions="actionNext"
                            android:singleLine="true"
                            android:textSize="@dimen/med_text_size"
                            tools:ignore="Deprecated" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp">

                        <com.san.app.font.EditTextAirbnb_book
                            android:id="@+id/edtFamilyName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/family_name_as_on_travel_document"
                            android:imeOptions="actionNext"
                            android:singleLine="true"
                            android:textSize="@dimen/med_text_size" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp">

                        <com.san.app.font.EditTextAirbnb_book
                            android:id="@+id/edtFirstName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/first_name_as_on_travel_document"
                            android:imeOptions="actionNext"
                            android:singleLine="true"
                            android:textSize="@dimen/med_text_size" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp">

                        <com.san.app.font.EditTextAirbnb_book
                            android:id="@+id/edtbirthday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/birthday1"
                            android:singleLine="true"
                            android:longClickable="false"
                            android:cursorVisible="false"
                            android:focusableInTouchMode="true"
                            android:focusable="false"
                            android:imeOptions="actionDone"
                            android:textSize="@dimen/med_text_size" />

                    </android.support.design.widget.TextInputLayout>



                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <com.san.app.font.EditTextAirbnb_book
                            android:id="@+id/edtCountryName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            android:focusable="false"
                            android:hint="@string/country_region_of_travel_document"
                            android:imeOptions="actionNext"
                            android:drawableRight="@drawable/ic_down_arrow_img"
                            android:singleLine="true"
                            android:textSize="@dimen/med_text_size"
                            tools:ignore="Deprecated" />

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <com.san.app.font.EditTextAirbnb_book
                            android:id="@+id/edtCountryCode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/ic_down_arrow_img"
                            android:editable="false"
                            android:focusable="false"
                            android:hint="@string/country_code"
                            android:imeOptions="actionNext"
                            android:singleLine="true"
                            android:textSize="@dimen/med_text_size"
                            tools:ignore="Deprecated" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp">

                        <com.san.app.font.EditTextAirbnb_book
                            android:id="@+id/edtPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone_number"
                            android:imeOptions="actionNext"
                            android:inputType="phone"
                            android:singleLine="true"
                            android:textSize="@dimen/med_text_size" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp">

                        <com.san.app.font.EditTextAirbnb_book
                            android:id="@+id/edtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email_to_receive_voucher"
                            android:imeOptions="actionDone"
                            android:inputType="textEmailAddress"
                            android:singleLine="true"
                            android:textSize="@dimen/med_text_size" />

                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>

                <com.san.app.font.TextViewAirbnb_book
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/payment_summary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.san.app.font.TextViewAirbnb_book
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="100dp"
                            android:text="@string/total"
                            android:textColor="@color/black_color"
                            android:textSize="@dimen/med_text_size" />

                        <com.san.app.font.TextViewAirbnb_medium
                            android:id="@+id/tvTotalAmount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="-100dp"
                            android:gravity="end"
                            android:textColor="@color/app_theme_dark" />

                    </LinearLayout>

                </LinearLayout>

                <com.san.app.font.TextViewAirbnb_book
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/payment_options" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.san.app.font.TextViewAirbnb_book
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="100dp"
                            android:text="@string/paypal"
                            android:textColor="@color/black_color"
                            android:textSize="@dimen/med_text_size" />


                    </LinearLayout>

                </LinearLayout>

                <com.san.app.font.TextViewAirbnb_medium
                    android:id="@+id/tvPayNow"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:textColor="@color/white"
                    android:text="@string/pay_now"
                    android:gravity="center"
                    android:textSize="@dimen/med_text_size"
                    android:background="@color/app_theme_dark"/>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>
</layout>