<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        card_view:cardBackgroundColor="@color/app_theme_dark"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="4dp"
        card_view:cardMaxElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.san.app.font.TextViewAirbnb_medium
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="@dimen/large_text_size" />

            <com.san.app.font.TextViewAirbnb_book
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/do_you_really_want_to_logout"
                android:textColor="@color/white"
                android:textSize="@dimen/med_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:weightSum="2">

                <com.san.app.font.TextViewAirbnb_medium
                    android:id="@+id/tv_cancle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:layout_marginTop="7dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/large_text_size" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:background="@color/white" />

                <com.san.app.font.TextViewAirbnb_medium
                    android:id="@+id/tv_yes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:layout_marginTop="7dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/yes"
                    android:textColor="@color/white"
                    android:textSize="@dimen/large_text_size" />

            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
