<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <com.san.app.font.TextViewAirbnb_medium
            android:id="@+id/txtfollow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/top_app_dark_curve"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/choose_option"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:visibility="visible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/txtfollow1"
            android:background="#F7F7F7" />

        <RelativeLayout
            android:id="@+id/actionbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtfollow1">




            <com.san.app.font.TextViewAirbnb_book
                android:id="@+id/txtcamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/camera"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:visibility="visible" />

            <View
                android:id="@+id/view_ling_01"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/txtcamera"
                android:background="@color/colorAccent" />

            <com.san.app.font.TextViewAirbnb_book
                android:id="@+id/txtgallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_ling_01"
                android:background="#ffffff"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/gallery"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorAccent"></View>



        <com.san.app.font.TextViewAirbnb_book
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/actionbar2"
            android:background="#ffffff"
            android:gravity="center"
            android:padding="10dp"
            android:text="Cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
